--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 @import "tailwindcss";
 @plugin "daisyui";
 
 @plugin "daisyui" {
   themes: light --default, dark --prefersdark;
 };
-@custom-variant dark (&:where(.dark, .dark *));
 
-/* @custom-variant dark (&:where([data-theme=night], [data-theme=night] *)); */
+@custom-variant dark (&:where([data-theme=night], [data-theme=night] *));
+
+* {
+  font-family: "Orbitron", sans-serif;
+}
